# hutch-beacon

./: .gitignore  BeaconBridge.sln  README.md
.azure/bicep/: main.bicep
.azure/bicep/hutch-beacon/: prod.bicepparam
.github/workflows/: build.beacon-bridge-ui.yml  build.beacon-bridge.yml  deploy.beacon-bridge.yml  deploy.becon-bridge-ui.yml  release.versioned.yml
app/BeaconBridge/: BeaconBridge.csproj  BeaconBridge.http  Program.cs  appsettings.json
app/BeaconBridge/Config/: AgreementPolicyOptions.cs  AssessActionsOptions.cs  BeaconInfoOptions.cs  BridgeOptions.cs  CrateAgentOptions.cs  CrateOrganizationOptions.cs  CrateProjectOptions.cs  CratePublishingOptions.cs  EgressOpenIdOptions.cs  EgressOptions.cs  FilteringTermsUpdateOptions.cs  (+11 more)
app/beacon-bridge-ui/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
app/beacon-omop-worker/: Dockerfile  README.md  pyproject.toml
app/beacon-omop-worker/beacon_omop_worker/: entities.py  query_solvers.py
app/beacon-omop-worker/beacon_omop_worker/beacon_dto/: file.py  filtering_term.py
app/beacon-omop-worker/scripts/: worker.py
app/beacon-omop-worker/src/beacon/beacon_omop_worker/: entities.py  query_solvers.py  settings.py
app/beacon-omop-worker/src/beacon/beacon_omop_worker/beacon_dto/: response_summary.py
app/beacon-omop-worker/src/beacon/scripts/: worker.py
lib/FiveSafes.Net/: FiveSafes.Net.csproj
tests/BeaconBridge.Tests/: BeaconBridge.Tests.csproj  TestMinioStoreService.cs
tests/FiveSafes.Net.Tests/: FiveSafes.Net.Tests.csproj  TestChecksumUtility.cs  TestFiveSafesBagItBuilder.cs
(+141 files in other folders)
