[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
python = ">=3.7,<3.11"

[tool.poetry]
name = "beacon-omop-worker"
description = ''
readme = "README.md"
license = "MIT"
keywords = []
authors = [
  "Daniel Lea <Daniel.Lea@nottingham.ac.uk>"
]
version = "0.0.1"
package-mode = true
packages = [
    { include = "beacon_omop_worker" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
sqlalchemy = "^2.0.29"
pandas="1.4.4"
psycopg2-binary = "^2.9.9"
requests="2.31.0"
python = ">=3.8,<3.11"

[project.optional-dependencies]
mysql = [
  "mysqlclient~=2.1.1",
]
sqlserver = [
  "pyodbc~=4.0.35",
]

[project.scripts]
beacon-omop-worker = "scripts.worker:main"
